--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
     "description": "A tool for studying JavaScript malware.",
     "dependencies": {
         "acorn": ">=8.8.0",
-        "xmldom": "*",
         "columnify": "*",
         "command-line-args": "^4.0.7",
-        "escodegen": "^1.9.1",
+        "escodegen": "^2.1.0",
         "global": "^4.4.0",
         "iconv-lite": "^0.4.23",
         "jschardet": "^1.6.0",
@@ -15,12 +14,14 @@
         "limiter": "^1.1.3",
         "node-html-parser": "*",
         "queue": "^4.4.2",
+        "strip-comments": "^2.0.1",
         "sync-request": "^6.0.0",
         "system-registry": "^1.0.0",
         "uglify-es": "^3.3.9",
         "uuid": "^3.2.1",
         "vm2": ">=3.9.19",
-        "walk-sync": "^0.3.2"
+        "walk-sync": "^0.3.2",
+        "xmldom": "*"
     },
     "devDependencies": {
         "babel-eslint": "^8.2.3",
